--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -1907,6 +1907,18 @@
     "\n",
     "Test_opti = test_opti_previous[list(columns)]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_default.to_csv(\"../Data/X_train_default.csv\")\n",
+    "y_train_default.to_csv(\"../Data/y_train_default.csv\")\n",
+    "X_test_default.to_csv(\"../Data/X_test_default.csv\")\n",
+    "y_test_default.to_csv(\"../Data/y_test_default.csv\")"
+   ]
   }
  ],
  "metadata": {
