--- a/Optimal Policy Tree.ipynb
+++ b/Optimal Policy Tree.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "f5d4028c-62bf-4ceb-aa6e-78b460ea766c",
    "metadata": {},
    "outputs": [],
@@ -20,121 +20,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "a72b27e9-5b02-4eef-9b9e-ce4fc076d5f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "true_labels = CSV.File(\"../Data/y_train_default.csv\") |> DataFrame\n",
+    "true_labels = select(true_labels, \"TARGET\")\n",
+    "true_labels = Matrix(true_labels);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "cce92c42-bc9b-4cae-afc7-fed7babde47a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "82430×1 Matrix{Int64}:\n",
-       " 0\n",
-       " 0\n",
-       " 0\n",
-       " 0\n",
-       " 0\n",
-       " 0\n",
-       " 0\n",
-       " 0\n",
-       " 0\n",
-       " 0\n",
-       " 0\n",
-       " 0\n",
-       " 0\n",
-       " ⋮\n",
-       " 0\n",
-       " 0\n",
-       " 0\n",
-       " 0\n",
-       " 0\n",
-       " 0\n",
-       " 0\n",
-       " 0\n",
-       " 0\n",
-       " 1\n",
-       " 1\n",
-       " 1"
+       "31×5 Matrix{Float64}:\n",
+       " 1.0       0.0       0.0       0.0       0.0\n",
+       " 0.0       1.0       0.0       0.0       0.0\n",
+       " 0.0       0.0       1.0       0.0       0.0\n",
+       " 0.0       0.0       0.0       1.0       0.0\n",
+       " 0.0       0.0       0.0       0.0       1.0\n",
+       " 0.5       0.5       0.0       0.0       0.0\n",
+       " 0.5       0.0       0.5       0.0       0.0\n",
+       " 0.5       0.0       0.0       0.5       0.0\n",
+       " 0.5       0.0       0.0       0.0       0.5\n",
+       " 0.0       0.5       0.5       0.0       0.0\n",
+       " 0.0       0.5       0.0       0.5       0.0\n",
+       " 0.0       0.5       0.0       0.0       0.5\n",
+       " 0.0       0.0       0.5       0.5       0.0\n",
+       " ⋮                                       \n",
+       " 0.333333  0.0       0.333333  0.0       0.333333\n",
+       " 0.333333  0.0       0.0       0.333333  0.333333\n",
+       " 0.0       0.333333  0.333333  0.333333  0.0\n",
+       " 0.0       0.333333  0.333333  0.0       0.333333\n",
+       " 0.0       0.333333  0.0       0.333333  0.333333\n",
+       " 0.0       0.0       0.333333  0.333333  0.333333\n",
+       " 0.0       0.25      0.25      0.25      0.25\n",
+       " 0.25      0.0       0.25      0.25      0.25\n",
+       " 0.25      0.25      0.0       0.25      0.25\n",
+       " 0.25      0.25      0.25      0.0       0.25\n",
+       " 0.25      0.25      0.25      0.25      0.0\n",
+       " 0.2       0.2       0.2       0.2       0.2"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "true_labels = CSV.File(\"../Data/y_train_default.csv\") |> DataFrame\n",
-    "true_labels = select(true_labels, \"TARGET\")\n",
-    "true_labels = Matrix(true_labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "493fba5d-0ac7-45d6-ab58-c5e1e8924895",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Treatments\n",
-    "\n",
     "Z = [\n",
-    "[0.0 0.0 1.0 0.0 0.0 0.0]; \n",
-    "[0.0 1.0 0.0 0.0 0.0 0.0]; \n",
-    "[1.0 0.0 0.0 0.0 0.0 0.0]; \n",
-    "[0.0 0.0 0.0 0.0 1.0 0.0]; \n",
-    "[0.0 0.0 0.0 1.0 0.0 0.0]; \n",
-    "[0.0 0.0 0.0 0.0 0.0 1.0]; \n",
-    "[0.0 0.5 0.0 0.0 0.5 0.0]; \n",
-    "[0.5 0.0 0.0 0.0 0.0 0.5]; \n",
-    "[0.0 0.0 0.0 0.0 0.5 0.5]; \n",
-    "[0.0 0.0 0.5 0.0 0.5 0.0]; \n",
-    "[0.0 0.0 0.5 0.5 0.0 0.0]; \n",
-    "[0.5 0.5 0.0 0.0 0.0 0.0]; \n",
-    "[0.0 0.0 0.5 0.0 0.0 0.5]; \n",
-    "[0.0 0.5 0.0 0.0 0.0 0.5]; \n",
-    "[0.0 0.5 0.5 0.0 0.0 0.0]; \n",
-    "[0.0 0.5 0.0 0.5 0.0 0.0]; \n",
-    "[0.5 0.0 0.5 0.0 0.0 0.0]; \n",
-    "[0.0 0.0 0.0 0.5 0.5 0.0]; \n",
-    "[0.5 0.0 0.0 0.5 0.0 0.0]; \n",
-    "[0.0 0.0 0.0 0.5 0.0 0.5]; \n",
-    "[0.5 0.0 0.0 0.0 0.5 0.0]; \n",
-    "[1/3 1/3 0.0 1/3 0.0 0.0]; \n",
-    "[0.0 0.0 1/3 1/3 1/3 0.0]; \n",
-    "[0.0 1/3 0.0 1/3 1/3 0.0]; \n",
-    "[1/3 0.0 1/3 0.0 0.0 1/3]; \n",
-    "[1/3 1/3 0.0 0.0 1/3 0.0]; \n",
-    "[0.0 1/3 1/3 0.0 1/3 0.0]; \n",
-    "[0.0 0.0 1/3 1/3 0.0 1/3]; \n",
-    "[1/3 0.0 0.0 1/3 0.0 1/3]; \n",
-    "[1/3 0.0 0.0 0.0 1/3 1/3]; \n",
-    "[0.0 1/3 0.0 1/3 0.0 1/3]; \n",
-    "[1/3 0.0 1/3 1/3 0.0 0.0]; \n",
-    "[0.0 1/3 1/3 1/3 0.0 0.0]; \n",
-    "[1/3 1/3 0.0 0.0 0.0 1/3]; \n",
-    "[1/3 0.0 1/3 0.0 1/3 0.0]; \n",
-    "[0.0 1/3 1/3 0.0 0.0 1/3]; \n",
-    "[0.0 0.0 0.0 1/3 1/3 1/3]; \n",
-    "[1/3 1/3 1/3 0.0 0.0 0.0]; \n",
-    "[1/3 0.0 0.0 1/3 1/3 0.0]; \n",
-    "[0.0 0.0 1/3 0.0 1/3 1/3]; \n",
-    "[0.0 1/3 0.0 0.0 1/3 1/3]; \n",
-    "[0.0 0.25 0.25 0.25 0.0 0.25]; \n",
-    "[0.25 0.25 0.0 0.25 0.25 0.0]; \n",
-    "[0.0 0.0 0.25 0.25 0.25 0.25]; \n",
-    "[0.25 0.0 0.0 0.25 0.25 0.25]; \n",
-    "[0.25 0.25 0.0 0.25 0.0 0.25]; \n",
-    "[0.0 0.25 0.25 0.25 0.25 0.0]; \n",
-    "[0.25 0.25 0.0 0.0 0.25 0.25]; \n",
-    "[0.25 0.0 0.25 0.25 0.25 0.0]; \n",
-    "[0.25 0.25 0.25 0.0 0.25 0.0]; \n",
-    "[0.25 0.0 0.25 0.25 0.0 0.25]; \n",
-    "[0.25 0.0 0.25 0.0 0.25 0.25]; \n",
-    "[0.25 0.25 0.25 0.25 0.0 0.0]; \n",
-    "[0.0 0.25 0.0 0.25 0.25 0.25]; \n",
-    "[0.25 0.25 0.25 0.0 0.0 0.25]; \n",
-    "[0.0 0.25 0.25 0.0 0.25 0.25];\n",
-    "[1/6 1/6 1/6 1/6 1/6 1/6]\n",
-    "];"
+    "    1 0 0 0 0\n",
+    "    0 1 0 0 0\n",
+    "    0 0 1 0 0\n",
+    "    0 0 0 1 0\n",
+    "    0 0 0 0 1\n",
+    "    0.5 0.5 0 0 0\n",
+    "    0.5 0 0.5 0 0\n",
+    "    0.5 0 0 0.5 0\n",
+    "    0.5 0 0 0 0.5\n",
+    "    0 0.5 0.5 0 0\n",
+    "    0 0.5 0 0.5 0\n",
+    "    0 0.5 0 0 0.5\n",
+    "    0 0 0.5 0.5 0\n",
+    "    0 0 0.5 0 0.5\n",
+    "    0 0 0 0.5 0.5\n",
+    "    1/3 1/3 1/3 0 0\n",
+    "    1/3 1/3 0 1/3 0\n",
+    "    1/3 1/3 0 0 1/3\n",
+    "    1/3 0 1/3 1/3 0\n",
+    "    1/3 0 1/3 0 1/3\n",
+    "    1/3 0 0 1/3 1/3\n",
+    "    0 1/3 1/3 1/3 0\n",
+    "    0 1/3 1/3 0 1/3\n",
+    "    0 1/3 0 1/3 1/3\n",
+    "    0 0 1/3 1/3 1/3\n",
+    "    0 0.25 0.25 0.25 0.25\n",
+    "    0.25 0 0.25 0.25 0.25\n",
+    "    0.25 0.25 0 0.25 0.25\n",
+    "    0.25 0.25 0.25 0 0.25\n",
+    "    0.25 0.25 0.25 0.25 0\n",
+    "    0.2 0.2 0.2 0.2 0.2\n",
+    "]"
    ]
   },
   {
